--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-01  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/tmpl/gtkselection.sgml: Move docs inline.
+
 2005-03-31  Michael Natterer  <mitch@gimp.org>
 
 	* gtk/gtk-sections.txt: added gtk_menu_set/get_take_focus().
