--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-04-03  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkradiomenuitem.c: Add a "group" property like
+	the one found in radio buttons.
+
+	* gtk/gtkradiobutton.c (gtk_radio_button_class_init): Fix
+	a typo in the docs.
+	(gtk_radio_button_set_group): Add change notification.
+
 2005-04-01  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkselection.c: Move documentation inline, document
