--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-03  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* hu.po: Hungarian translation updated.
+
 2005-03-31  Steve Murphy  <murf@e-tools.com>
 
         * rw.po: Updated Kinyarwanda translation from compendium.
