--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-03  Raphael Higino  <raphaelh@cvs.gnome.org>
+
+	* pt_BR.po: Updated Brazilian Portuguese translation.
+
 2005-04-03  Alessio Frusciante  <algol@firenze.linux.it>
 
 	* it.po: Updated Italian translation by
