--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-04  Funda Wang  <fundawang@linux.net.cn>
+
+	* zh_CN.po: Updated Simplified Chinese translation.
+
 2005-04-03  Raphael Higino  <raphaelh@cvs.gnome.org>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation.
@@ -5,7 +9,7 @@
 2005-04-03  Alessio Frusciante  <algol@firenze.linux.it>
 
 	* it.po: Updated Italian translation by
-        Alessio Dessì <alessiodessi@tiscali.it>.
+        Alessio Dess <alessiodessi@tiscali.it>.
 
 2005-04-03  Gabor Kelemen  <kelemeng@gnome.hu>
 
@@ -50,7 +54,7 @@
 2005-03-28  Alessio Frusciante  <algol@firenze.linux.it>
 
 	* it.po: Updated Italian translation by
-	Alessio Dessì <alessiodessi@tiscali.it>.
+	Alessio Dess <alessiodessi@tiscali.it>.
 
 2005-03-27  Raphael Higino  <raphaelh@cvs.gnome.org>
 
