--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2005-04-04  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtktoolbar.c: Add a tooltips property.
+
 	* gtk/gtkradiomenuitem.c (gtk_radio_menu_item_class_init): 
 	* gtk/gtkruler.c (gtk_ruler_class_init): Add docs.
 
