--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-04-04  Johan Dahlin  <johan@gnome.org>
+
+	* gtk/gtk.symbols: Remove symbols accidentally added.
+	* gtk/gtkentryprivate.h: Add boolean property popup_set_width
+	* gtk/gtktoggletoolbutton.c: (gtk_toggle_tool_button_class_init):
+	Use object_class instead of gobject_class
+
 Mon Apr  4 12:14:35 2005  Søren Sandmann  <sandmann@redhat.com>
 
 	* gtk/gtkmenu.c (gtk_menu_handle_scrolling): Translate x, y into
