--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Mon Apr  4 14:33:55 2005  Manish Singh  <yosh@gimp.org>
+
+	* gtk/gtkcomboboxentry.c (gtk_combo_box_entry_get_active_text):
+	cast combo->priv->entry to GTK_ENTRY()
+
+	* gtk/gtkentrycompletion.c (_gtk_entry_completion_resize_popup):
+	cast completion->priv->tree_view to GTK_TREE_VIEW()
+
 2005-04-04  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtktextbuffer.c: Some trivial doc fixes.
