--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Apr  4 19:13:23 2005  Jonathan Blandford  <jrb@redhat.com>
+
+	* gtk/gtktreeview.c (gtk_tree_view_expand_all): change to use
+	gtk_tree_view_real_expand_row() instead of doing this by hand.
+
 2005-04-04  Johan Dahlin  <johan@gnome.org>
 
 	* gtk/gtktextbuffer.c: (gtk_text_buffer_class_init),
