--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,44 @@
+Overview of Changes from GTK+ 2.6.4 to GTK+ 2.6.5
+=================================================
+* Fix compilation with gcc 4.0 [Matthias Clasen]
+* GtkFileChooser
+  - Ellipsize the preview label [Jeroen Zwartepoorte]
+  - The mime code can now use a mmapped cache [Matthias]
+* GtkTreeView
+  - Don't pop up the entry context menu if the
+    the search entry is not visible  [Billy Biggs]
+  - Make enable_search control only typeahead, not
+    C-f search  [Sven Neumann]
+  - Make gtk_tree_view_expand_all work [Tristan Van Berkom,
+    Jonathan Blandford]
+* GtkComboBoxEntry
+  - gtk_combo_box_get_active_text() now always returns
+    the current text.  [Robert Staudinger]
+* gdk-pixbuf
+  - Bug fixes [Tommi Komulainen, Morten Welinder]
+  - Use correct update regions when incrementally loading 
+    BMP and TGA images [Owen Taylor, David Costanzo]
+  - Support saving BMPs [Ivan Wong]
+* Win32
+  - Make big windows work on NT-based Windows [Ivan]
+  - Implement delayed rendering for transferring images
+    through the clipboard [Ivan, Tor]
+  - Add ABI stability wrappers for gdk_pixbuf_save
+    and gdk_pixbuf_savev [Tor]
+  - Build fixes [Hans Breuer, Tor Lillqvist]
+  - Bug fixes [Hans, Tor]
+* Other bug fixes [Christian Persch, Sven Neumann,
+  Philip Langdale, Tomislav Jonjic, Thomas Leonard, 
+  Yury Puzis, Manish Singh, Doug Quale, Ryan Lortie,
+  Kjartan Maraas, Morten, Felipe Heidrich, Paolo 
+  Borelli, Jorn Baayen]
+* Documentation improvements [Johan Dahlin, Matthias,
+  Jianfei Wang, Olivier Sessink, Jon-Kare Hellan]
+* New and improved translations (ca,cs,cy,da,de,en_CA,
+  en_GB,es,fi,fr,gu,hu,it,lt,nl,pl,pt,pt_BR,ro,ru,rw,sq,
+  sr,sr@Latn,sv,zh_CN,zh_TW)
+Bugs: 168966,168830,169047,169528,169873,169881,169989,169334,170146,170567,170611,168791,170776,170746,169534,171398,169516,135552,169753,172031,172038,170435,170755,171373,172350,171641,168173,170727,172236,172319,168857,168906,169741,167973,171707,150664,171883,168173,140706,143415
+
 Overview of Changes from GTK+ 2.6.3 to GTK+ 2.6.4
 =================================================
 * Move a lot of const data to the .rodata section [Matthias Clasen]
