Mention enter and leave events. (#167546, Billy Biggs)
2005-04-05  Matthias Clasen  <mclasen@redhat.com>

	* gtk/tmpl/gtktooltips.sgml: Mention enter and leave
	events.  (#167546, Billy Biggs)

--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,8 @@
+2005-04-05  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/tmpl/gtktooltips.sgml: Mention enter and leave
+	events.  (#167546, Billy Biggs)
+
 2005-04-04  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtk-sections.txt: Add new functions.
