--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-04-05  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtktreeview.c (gtk_tree_view_set_search_column): Add some
+	more docs on interactive search.
+
 2005-04-05  Tor Lillqvist  <tml@novell.com>
 
 	* gdk/win32/gdkvisual-win32.c (_gdk_visual_init): Handle 16 colour
