--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-05  Hendrik Richter  <hendrik@gnome-de.org>
+
+	* de.po: Updated German translation.
+
 2005-04-05  Žygimantas Beručka  <uid0@akl.lt>
 
 	* lt.po: Updated Lithuanian translation.
