--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-05  Hendrik Richter  <hendi@gnome-de.org>
+
+	* de.po: Updated German translation.
+
 2005-04-04  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Tino Meinen.
