--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-06  Danilo Šegan  <dsegan@gmx.net>
+
+	* sr.po, sr@Latn.po: Updated Serbian translation.
+
 2005-04-05  Hendrik Richter  <hendrik@gnome-de.org>
 
 	* de.po: Updated German translation.
