--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-06  Maxim Dziumanenko <mvd@mylinux.com.ua>
+
+	* uk.po: Updated Ukrainian translation.
+
 2005-04-05  Hendrik Richter  <hendi@gnome-de.org>
 
 	* de.po: Updated German translation.
