--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 2005-04-06  Matthias Clasen  <mclasen@redhat.com>
+	
+	* po/.cvsignore, po-properties/.cvsignore: Remove
+	Makefile.in.in.  (#171092, Stefan Kasal)
+
+2005-04-06  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkrc.c (gtk_rc_parse_style): Don't modify scanner->value,
 	copy it first.  (#165693, Tommi Komulainen)
