--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-04-06  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtktreeview.c (gtk_tree_view_set_search_column): Allow
+	resetting search-column to -1, and document it.  (#172891,
+	Lorenzo Gil Sanchez)
+
+2005-04-06  Matthias Clasen  <mclasen@redhat.com>
+
 	* gtk/gtktreeview.c (gtk_tree_view_motion_resize_column) 
 	(gtk_tree_view_bin_expose): Avoid a few unnecessary calls
 	to gdk_window_get_pointer(). (#168015, Billy Biggs)
