--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-04-06  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtktreeview.c (gtk_tree_view_enable_model_drag_source) 
+	(gtk_tree_view_enable_model_drag_dest): Pass the target list 
+	to the underlying dnd implementation, otherwise we miss the 
+	target info in the drag-data-received signal.  (#164085, Jorn
+	Baayen)
+
 	* gtk/*.c, gdk/gdkdisplaymanager.c: Use canonical property
 	names for g_object_notify() calls.  (#171746, Morten Welinder)
 	  
