--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,11 @@
 
 	* gtk/gtktreeview.c (gtk_tree_view_set_search_column): Document
 	-1 as possible value.  
+	(gtk_tree_view_enable_model_drag_source) 
+	(gtk_tree_view_enable_model_drag_dest): Pass the target list 
+	to the underlying dnd implementation, otherwise we miss the 
+	target info in the drag-data-received signal.  (#164085, Jorn
+	Baayen)
 
 2005-04-06  Matthias Clasen  <mclasen@redhat.com>
 
