--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-04-06  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/*.c, gdk/gdkdisplaymanager.c: s/G-OBJECT/G_OBJECT/g.
+
+2005-04-06  Matthias Clasen  <mclasen@redhat.com>
+
 	* gtk/gtktreeview.c (gtk_tree_view_enable_model_drag_source) 
 	(gtk_tree_view_enable_model_drag_dest): Pass the target list 
 	to the underlying dnd implementation, otherwise we miss the 
