--- a/gdk-pixbuf/ChangeLog
+++ b/gdk-pixbuf/ChangeLog
@@ -1,3 +1,8 @@
+2005-04-07  Matthias Clasen  <mclasen@redhat.com>
+
+	* io-bmp.c (DecodeColormap): Initialize the colormap to 
+	zero.  (#171762, David Costanzo)
+
 2005-03-30  Matthias Clasen  <mclasen@redhat.com>
 
 	* io-bmp.c: Avoid bus errors due to unaligned access. (#168173,
