--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-07  Abel Cheung  <maddog@linuxhall.org>
+
+	* zh_TW.po: Updated traditional Chinese translation from GNOME HK Team
+
 2005-03-20  Steve Murphy  <murf@e-tools.com>
 
 	* rw.po: Kinyarwanda translation updated from compendium.
