--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,5 +1,9 @@
 2005-04-07  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/tmpl/gtkenums.sgml: Make the docs of GKT_SELECTION_MULTIPLE
+	more accurate by making them more vague.  (#167088,
+	Ken Siersma)
+
 	* gtk/question_index.sgml: Add a question about hiding
 	tree view expanders.
 
