Updated British English translation

--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-07  Gareth Owen  <gowen72@yahoo.com>
+
+	* en_GB.po: Update British English translation
+
 2005-04-07  Abel Cheung  <maddog@linuxhall.org>
 
 	* zh_TW.po: Updated traditional Chinese translation from GNOME HK Team
