--- a/gdk-pixbuf/ChangeLog
+++ b/gdk-pixbuf/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-08  Matthias Clasen  <mclasen@redhat.com>
+
+	* io-pcx.c: No debugging output, please.
+
 2005-04-07  Matthias Clasen  <mclasen@redhat.com>
 
 	* io-bmp.c (DecodeColormap): Initialize the colormap to 
