--- a/gtk/xdgmime/ChangeLog
+++ b/gtk/xdgmime/ChangeLog
@@ -1,3 +1,9 @@
+2005-04-08  Matthias Clasen  <mclasen@redhat.com>
+
+	* xdgmimecache.c (cache_magic_matchlet_compare_to_data) 
+	(cache_magic_matchlet_compare): Use cache->buffer, not 
+	cache.  
+
 2005-04-02  Matthias Clasen  <mclasen@redhat.com>
 
 	Sync to latest upstream, support mmapped
