--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-04-08  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkimage.c (gtk_image_expose, gtk_image_calc_size): 
+	If a stock_id is unknown, display the missing image. (#169870,
+	Steven Walter)
+
 	* gtk/gtkiconcache.c (icon_name_hash): Use the same function 
 	as in updateiconcache.c.  (spotted by Morten Welinder)
 
