--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-09  Artur Flinta  <aflinta@cvs.gnome.org>
+
+	* pl.po: Updated Polish translation by GNOME PL Team.
+
 2005-04-09  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.6.5 ===
