Don't display too many broken images. (#169870, Roman Kagan, patch by Ivan
2005-04-09  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkimage.c (gtk_image_calc_size, gtk_image_expose):
	Don't display too many broken images.  (#169870, Roman
	Kagan, patch by Ivan Wong)

	* gtk/gtkwidget.c (gtk_widget_unparent): Remove debugging
	output.  (#300013, Tommi Komulainen)

	* io-bmp.c (gdk_pixbuf__bmp_image_save_to_callback):
	Don't overflow the stack.  (Jakub Jelinek, Arjan van de Ven)

--- a/gdk-pixbuf/ChangeLog
+++ b/gdk-pixbuf/ChangeLog
@@ -1,5 +1,8 @@
 2005-04-09  Matthias Clasen  <mclasen@redhat.com>
 
+	* io-bmp.c (gdk_pixbuf__bmp_image_save_to_callback): 
+	Don't overflow the stack.  (Jakub Jelinek, Arjan van de Ven)
+
 	* === Released 2.6.5 ===
 
 2005-04-08  Matthias Clasen  <mclasen@redhat.com>
