--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2005-04-09  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkimage.c (gtk_image_calc_size, gtk_image_expose): 
+	Don't display too many broken images.  (#169870, Roman
+	Kagan, patch by Ivan Wong)
+
+	* gtk/gtkwidget.c (gtk_widget_unparent): Remove debugging
+	output.  (#300013, Tommi Komulainen)
+
+2005-04-09  Matthias Clasen  <mclasen@redhat.com>
+
 	* configure.in: Bump version
 
 	* === Released 2.6.5 ===
