--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-09  Matthias Clasen  <mclasen@redhat.com>
+
+	* POTFILES.in: Add some files.
+
 2005-04-09  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
