Updated Catalan translation.

--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-11  Josep Puigdemont  <josep.puigdemont@gmail.com>
+
+	* ca.po: Updated Catalan translation.
+
 2005-04-09  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.6.5 ===
