--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-11  Josep Puigdemont  <josep.puigdemont@gmail.com>
+
+	* ca.po: Updated Catalan translation.
+
 2005-04-09  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
