--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-11  Matthias Clasen  <mclasen@redhat.com>
+
+	* configure.in: Bump version.
+
 2005-04-10  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.6.6 ===
