--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-11  Takeshi AIHANA <aihana@gnome.gr.jp>
+
+	* ja.po: Updated Japanese translation.
+
 2005-04-11  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
