--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-11  Josep Puigdemont  <josep.puigdemont@gmail.com>
+
+	* ca.po: Updated Catalan translation.
+
 2005-04-11  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
