Updated Danish translation.
        * da.po: Updated Danish translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-13  Martin Willemoes Hansen  <mwh@sysrq.dk>
+
+	* da.po: Updated Danish translation.
+
 2005-04-12  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Releases 2.6.7 ====
