--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-13  Iñaki Larrañaga  <dooteo@euskalgnu.org>
+
+	* eu.po: Updated Basque trasnlation.
+
 2005-04-11  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
